# lama-release

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
include/lama_jockeys/: navigating_jockey.h
interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
interfaces/src/lama_interfaces/: abstract_db_interface.py  core_interface.py  graph_builder.py
interfaces/srv/: ActOnMap.srv
interfaces/test/: test_core.py  test_interfaces.py  utest.cpp
jockeys/: CHANGELOG.rst  CMakeLists.txt  package.xml
jockeys/action/: Learn.action  Localize.action  Navigate.action
jockeys/include/lama_jockeys/: jockey.h  learning_jockey.h  localizing_jockey.h
jockeys/src/: learning_jockey.cpp  localizing_jockey.cpp  navigating_jockey.cpp
lama_core/: CHANGELOG.rst
lama_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rpm/: ros-indigo-lama-core.spec  ros-indigo-lama-interfaces.spec  ros-indigo-lama-jockeys.spec  ros-indigo-lama-msgs.spec  template.spec
scripts/: map_node
src/: learning_jockey.cpp  localizing_jockey.cpp
src/lama_interfaces/: abstract_db_interface.py  core_interface.py  graph_builder.py
test/: test_interfaces_roscpp.test
