<?xml version="1.0"?>
<package>
  <name>lama_interfaces</name>
  <version>0.1.0</version>
  <description>
	  The lama_interfaces package provides the interfaces between ROS nodes
	  (such as jockeys from lama_jockeys) and the map.
  </description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://wiki.ros.org/lama_interfaces</url>
  <url type="repository">https://github.com/lama-imr/lama.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>
  <author email="kosnar@labe.felk.cvut.cz">Karel Košnar</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <test_depend>gtest</test_depend>
  <test_depend>python-nose</test_depend>


  <export>
  </export>
</package>
