<?xml version="1.0"?>
<package>
  <name>lama_jockeys</name>
  <version>0.1.1</version>
  <description>The lama_jockeys package contains base classes for learning,
  localizing, and navigating jockeys.</description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/lama_jockeys</url>
  <url type="repository">https://github.com/lama-imr/lama.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>
  <author email="kosnar@labe.felk.cvut.cz">Karel Košnar</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>lama_interfaces</build_depend>
  <build_depend>lama_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>lama_interfaces</run_depend>
  <run_depend>lama_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>


  <export>
  </export>
</package>
